@@ -1,9 +1,8 @@
 #' A simple chi-squared test of two proportions
 #' @noRd
 
-# 3-3-2008 MRC-Epid JHZ
-
 x2 <- function(p1,p2,n1,n2)
+# 3-3-2008 MRC-Epid JHZ
 {
    m <- p1-p2
    v <- p1*(1-p1)/n1+p2*(1-p2)/n2
@@ -21,16 +20,16 @@ x2 <- function(p1,p2,n1,n2)
 #' @param model Disease model, i.e., "multiplicative","additive","dominant","recessive","overdominant".
 #'
 #' @details
-#' This is a revised version of \code{\link[gap]{pbsize}} which is appropriate for
-#' a case-control design under a range of disease models. Essentially, for given sample
-#' size(s), a proportion of which (fc) being cases, the function calculates power estimate
-#' for a given type I error (alpha), genotype relative risk (gamma), frequency of the
-#' risk allele (p), the prevalence of disease in the population (kp) and optionally a
-#' disease model (model). A major difference would be the consideration of case/control
+#' This extends \code{\link[gap]{pbsize}} from a multiplicative model for a case-control
+#' design under a range of disease models. Essentially, for given sample sizes(s), a
+#' proportion of which (fc) being cases, the function calculates power estimate for a
+#' given type I error (alpha), genotype relative risk (gamma), frequency of the risk
+#' allele (p), the prevalence of disease in the population (kp) and optionally a disease
+#' model (model). A major difference would be the consideration of case/control
 #' ascertainment in \code{\link[gap]{pbsize}}.
 #'
 #' Internally, the function obtains a baseline risk to make the disease model consistent
-#' with Kp as in \code{\link[gap]{tscc}} and should produce accurate power estimate. Note it
+#' with Kp as in \code{\link[gap]{tscc}} and should produce accurate power estimate. It
 #' provides power estimates for given sample size(s) only.
 #'
 #' @export
@@ -41,38 +40,22 @@ x2 <- function(p1,p2,n1,n2)
 #'
 #' @examples
 #' \dontrun{
-#' # single calc
+#' # single calculation
 #' m <- c("multiplicative","recessive","dominant","additive","overdominant")
 #' for(i in 1:5) print(pbsize2(N=50,alpha=5e-2,gamma=1.1,p=0.1,kp=0.1, model=m[i]))
 #'
-#' # for a range of sample sizes
-#' pbsize2(p=0.1, N=c(25,50,100,200,500), gamma=1.1, kp=.1, alpha=5e-2, model='r')
+#' # a range of sample sizes
+#' pbsize2(p=0.1, N=c(25,50,100,200,500), gamma=1.2, kp=.1, alpha=5e-2, model='r')
 #'   
-#' # create a power table
-#' f <- function(p)     
-#'   pbsize2(p=p, N=seq(100,1000,by=100), gamma=1.1, kp=.1, alpha=5e-2, model='recessive')
-#' m <- sapply( X=seq(0.1,0.9, by=0.1), f)
+#' # a power table
+#' m <- sapply(seq(0.1,0.9, by=0.1),
+#'             function(x) pbsize2(p=x, N=seq(100,1000,by=100),
+#'                         gamma=1.2, kp=.1, alpha=5e-2, model='recessive'))
 #' colnames(m) <- seq(0.1,0.9, by=0.1)
 #' rownames(m) <- seq(100,1000,by=100)
 #' print(round(m,2))
+#' }
 #'
-#' library(genetics)
-#' m <- c("multiplicative","recessive","dominant","partialrecessive")
-#' for(i in 1:4) print(power.casectrl(p=0.1, N=50, gamma=1.1, kp=.1, alpha=5e-2,
-#'     minh=m[i]))
-#' power.casectrl(p=0.1, N=c(25,50,100,200,500), gamma=1.1, kp=.1, alpha=5e-2,
-#'     minh='r')
-#' f <- function(p)
-#'   power.casectrl(p=p, N=seq(100,1000,by=100), gamma=1.1, kp=.1, alpha=5e-2,
-#'     minh='recessive')
-#' m <- sapply( X=seq(0.1,0.9, by=0.1), f)
-#' colnames(m) <- seq(0.1,0.9, by=0.1)
-#' rownames(m) <- seq(100,1000,by=100)
-#' print(round(m,2))
-#'}
-#'
-#' @author Jing Hua Zhao
-#' @note Why is the comparison with power.casectrl so bad?
 #' @keywords misc
 
 pbsize2 <- function(N,fc=0.5,alpha=0.05,gamma=4.5,p=0.15,kp=0.1,model="additive")
